--- a/segment_4_fully_commented.ipynb
+++ b/segment_4_fully_commented.ipynb
@@ -298,6 +298,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# now that the noise has been removed, get a more representative value for average width of the edges in pixels\n",
+    "\n",
+    "# sum binary map to get total area of edges\n",
+    "aprime = np.sum(removed)\n",
+    "\n",
+    "# skeletonize and sum the skeleton to get total length of edges\n",
+    "skprime = skeleton_th=skeletonize(removed)\n",
+    "lprime = np.sum(skprime)\n",
+    "\n",
+    "w= aprime/lprime\n",
+    "\n",
+    "w"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {
     "collapsed": false
