--- a/initial_image_enhancement_example.ipynb
+++ b/initial_image_enhancement_example.ipynb
@@ -78,7 +78,7 @@
    "source": [
     "Next we will enhance this image with a couple of cascaded processes.\n",
     "\n",
-    "But before we do that let's look at a cross section in the y direction to understand how the edges fare compare to the background in terms of intensity, which ultimately will determin our success in separating them from it."
+    "But before we do that let's look at a cross section in the y direction to understand how the edges fare compared to the background in terms of intensity, which ultimately will determine our success in separating them from it."
    ]
   },
   {
