--- a/morphological_closing_example_scikit-image.ipynb
+++ b/morphological_closing_example_scikit-image.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "# WORK IN PROGRESS\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from skimage.morphology import disk, dilation, closing, erosion\n",
