--- a/morphological_closing_example_scikit-image.ipynb
+++ b/morphological_closing_example_scikit-image.ipynb
@@ -41,6 +41,7 @@
    },
    "outputs": [],
    "source": [
+    "# Loading some edges\n",
     "edges = 1- np.loadtxt('edges.txt', delimiter=',')"
    ]
   },
