--- a/morphological_closing_example_scikit-image.ipynb
+++ b/morphological_closing_example_scikit-image.ipynb
@@ -41,7 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "# Loading some edges\n",
+    "# Loading two edges, not connected\n",
     "edges = 1- np.loadtxt('edges.txt', delimiter=',')"
    ]
   },
@@ -75,6 +75,7 @@
     }
    ],
    "source": [
+    "# Plot the edges. We want to link them using morphological operations\n",
     "fig = plt.figure(figsize=(5, 5))\n",
     "ax = fig.add_subplot(1, 1, 1)\n",
     "\n",
