--- a/morphological_closing_example_scikit-image.ipynb
+++ b/morphological_closing_example_scikit-image.ipynb
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "# Plot the edges. We want to link them using morphological operations\n",
+    "# Plot the edges\n",
     "fig = plt.figure(figsize=(5, 5))\n",
     "ax = fig.add_subplot(1, 1, 1)\n",
     "\n",
@@ -114,6 +114,7 @@
     }
    ],
    "source": [
+    "# We want to link these edges using morphological operations\n",
     "# closing =  dilation followed by an erosion\n",
     "closed = closing(edges, disk(2))\n",
     "\n",
