--- a/morphological_closing_example_scikit-image.ipynb
+++ b/morphological_closing_example_scikit-image.ipynb
@@ -170,7 +170,7 @@
     "ax.set_xticks([])\n",
     "ax.set_yticks([])\n",
     "\n",
-    "# did not work because we did not open enough"
+    "# It did not work but why?"
    ]
   },
   {
