--- a/morphological_closing_example_scikit-image.ipynb
+++ b/morphological_closing_example_scikit-image.ipynb
@@ -15,7 +15,10 @@
    "source": [
     "Goal of this notebook here. The gist is to explain visually the morphological sequence:\n",
     "\n",
-    "dilation + erosion = closing"
+    "dilation + erosion = closing"\n",
+    "Before continuing with this notebook, I'd recommend reading:\n",
+    "about Erosion, Dilation, and Opening on the Scikit-image website:\n",
+    "http://scikit-image.org/docs/dev/auto_examples/applications/plot_morphology.html\n",
    ]
   },
   {
