--- a/morphological_closing_example_scikit-image.ipynb
+++ b/morphological_closing_example_scikit-image.ipynb
@@ -14,11 +14,10 @@
    "metadata": {},
    "source": [
     "Goal of this notebook here. The gist is to explain visually the morphological sequence:\n",
-    "\n",
     "dilation + erosion = closing"\n",
-    "Before continuing with this notebook, I'd recommend reading:\n",
-    "about Erosion, Dilation, and Opening on the Scikit-image website:\n",
-    "http://scikit-image.org/docs/dev/auto_examples/applications/plot_morphology.html\n",
+    "Before continuing with this notebook, I'd recommend reading\n",
+    "about Erosion, Dilation, and Opening on the Scikit-image website\n",
+    "http://scikit-image.org/docs/dev/auto_examples/applications/plot_morphology.html \n",
    ]
   },
   {
