--- a/morphological_closing_example_scikit-image.ipynb
+++ b/morphological_closing_example_scikit-image.ipynb
@@ -462,6 +462,8 @@
    "metadata": {},
    "source": [
     "#### Ta–daaaaa"
+    "you should now explain how this works in detail, by verbslizing what happens in the dilation and erosion step by step.\n",
+    "Like adding layers to an onion and then peeling them back off"
    ]
   }
  ],
