--- a/morphological_closing_example_scikit-image.ipynb
+++ b/morphological_closing_example_scikit-image.ipynb
@@ -461,8 +461,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ta–daaaaa"
+    "#### Ta–daaaaa\n",
+    "you should now explain how this works in detail, by verbslizing what happens in the dilation and erosion step by step. Like adding layers to an onion and then peeling them back off."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
