fixed issue with notebook

--- a/morphological_closing_example_scikit-image.ipynb
+++ b/morphological_closing_example_scikit-image.ipynb
@@ -15,11 +15,7 @@
    "source": [
     "Goal of this notebook here. The gist is to explain visually the morphological sequence:\n",
     "\n",
-    "dilation + erosion = closing\n",
-    "\n",
-    "Before continuing with this notebook, I'd recommend reading\\n about Erosion, Dilation, and Opening on the Scikit-image website: \n",
-    "\n",
-    "http://scikit-image.org/docs/dev/auto_examples/applications/plot_morphology"
+    "dilation + erosion = closing"
    ]
   },
   {
@@ -45,7 +41,6 @@
    },
    "outputs": [],
    "source": [
-    "# Loading two edges, not connected\n",
     "edges = 1- np.loadtxt('edges.txt', delimiter=',')"
    ]
   },
@@ -79,7 +74,6 @@
     }
    ],
    "source": [
-    "# Plot the edges\n",
     "fig = plt.figure(figsize=(5, 5))\n",
     "ax = fig.add_subplot(1, 1, 1)\n",
     "\n",
@@ -118,7 +112,6 @@
     }
    ],
    "source": [
-    "# We want to link these edges using morphological operations\n",
     "# closing =  dilation followed by an erosion\n",
     "closed = closing(edges, disk(2))\n",
     "\n",
@@ -174,7 +167,7 @@
     "ax.set_xticks([])\n",
     "ax.set_yticks([])\n",
     "\n",
-    "# It did not work but why?"
+    "# did not work because we did not open enough"
    ]
   },
   {
@@ -461,24 +454,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
-    "#### Ta–daaaaa\n",
-    "you should now explain how this works in detail, by verbslizing what happens in the dilation and erosion step by step. Like adding layers to an onion and then peeling them back off."
-=======
     "#### Ta–daaaaa"
-    "you should now explain how this works in detail, by verbslizing what happens in the dilation and erosion step by step.\n",
-    "Like adding layers to an onion and then peeling them back off"
->>>>>>> origin/master
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
