fixing notebook issues

--- a/morphological_closing_example_scikit-image.ipynb
+++ b/morphological_closing_example_scikit-image.ipynb
@@ -15,7 +15,11 @@
    "source": [
     "Goal of this notebook here. The gist is to explain visually the morphological sequence:\n",
     "\n",
-    "dilation + erosion = closing"
+    "dilation + erosion = closing\n",
+    "\n",
+    "Before continuing with this notebook, I'd recommend reading\\n about Erosion, Dilation, and Opening on the Scikit-image website:\n",
+    "\n",
+    "http://scikit-image.org/docs/dev/auto_examples/applications/plot_morphology"
    ]
   },
   {
@@ -41,6 +45,7 @@
    },
    "outputs": [],
    "source": [
+    "# Loading some made-up edges, not connected\n",
     "edges = 1- np.loadtxt('edges.txt', delimiter=',')"
    ]
   },
@@ -74,6 +79,7 @@
     }
    ],
    "source": [
+    "# Plot the edges\n",
     "fig = plt.figure(figsize=(5, 5))\n",
     "ax = fig.add_subplot(1, 1, 1)\n",
     "\n",
@@ -112,6 +118,8 @@
     }
    ],
    "source": [
+    "# We want to link these edges using morphological operations\n",
+    "\n",
     "# closing =  dilation followed by an erosion\n",
     "closed = closing(edges, disk(2))\n",
     "\n",
@@ -123,7 +131,7 @@
     "ax.set_xticks([])\n",
     "ax.set_yticks([])\n",
     "\n",
-    "# worked"
+    "# It worked"
    ]
   },
   {
@@ -155,7 +163,7 @@
     }
    ],
    "source": [
-    "# what happens with a smaller disk size?\n",
+    "# What happens with a smaller disk size?\n",
     "\n",
     "not_closed = closing(edges, disk(1))\n",
     "\n",
@@ -167,7 +175,7 @@
     "ax.set_xticks([])\n",
     "ax.set_yticks([])\n",
     "\n",
-    "# did not work because we did not open enough"
+    "# It did not work but why?"
    ]
   },
   {
@@ -454,8 +462,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ta–daaaaa"
+    "#### Ta–daaaaa\n",
+    "\n",
+    "you should now explain how this works in detail, by verbslizing what happens in the dilation and erosion step by step. Like adding layers to an onion and then peeling them back off."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
