--- a/morphological_closing_example_scikit-image.ipynb
+++ b/morphological_closing_example_scikit-image.ipynb
@@ -15,9 +15,7 @@
     "\n",
     "dilation + erosion = closing\n",
     "\n",
-    "The results of closing is that the external points of the image will be left as they were in the input, but any 'bays' will be smoothed and thickened, and 'holes' and 'gaps' closed. Disconnected objects that are very close together can become linked together.\n",
-    "\n",
-    "Before continuing with this notebook, I'd recommend reading about Erosion, Dilation, and Opening on the Scikit-image website:\n",
+    "Before continuing with this notebook, I'd recommend reading about morphological erosion, dilation, and closing on the Scikit-image website:\n",
     "\n",
     "http://scikit-image.org/docs/dev/auto_examples/applications/plot_morphology\n",
     "\n",
@@ -27,7 +25,11 @@
     "\n",
     "http://www.imagemagick.org/Usage/morphology/#erode\n",
     "\n",
-    "http://www.imagemagick.org/Usage/morphology/#close"
+    "http://www.imagemagick.org/Usage/morphology/#close\n",
+    "\n",
+    "When applying closing to a binary image, the external points in any object in the input image will be left unchanged in the output, but indentations will be smoothed and holes closed, partially or completely. Disconnected objects like edges (or lines in sketches) that are close, can become connected.\n",
+    "\n",
+    "We will now demonstrate it."
    ]
   },
   {
